--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.20.4"
+    "knex": "^0.20.4",
+    "readline-sync": "^1.4.10",
+    "system-sleep": "^1.3.6"
   }
 }
